--- a/catalog.html
+++ b/catalog.html
@@ -50,16 +50,16 @@
       <section class="hero-wrap js-fullheight">
 	      <div class="container px-0">
 	        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="img-fluid" src="semih.png" alt="First slide">
+                  <img src="..." class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-150" src="semih-2.png" alt="Second slide">
+                  <img src="..." class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img class="img-fluid" src="semih.png" alt="Third slide">
+                  <img src="..." class="d-block w-100" alt="...">
                 </div>
               </div>
             </div>
