--- a/catalog.html
+++ b/catalog.html
@@ -52,14 +52,14 @@
 	        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-item active" data-bs-interval="500">
+                  <img src="sliderimg1.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-item" data-bs-interval="500">
+                  <img src="sliderimg2.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-item" data-bs-interval="500">
+                  <img src="sliderimg3.png" class="d-block w-100" alt="...">
                 </div>
               </div>
             </div>
