--- a/catalog.html
+++ b/catalog.html
@@ -50,19 +50,18 @@
       <section class="hero-wrap js-fullheight">
 	      <div class="container px-0">
 	        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="sliderimg1.png" class="d-block w-100" data-bs-interval="5000">
+                    <img src="sliderimg1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="sliderimg2.png" class="d-block w-100" data-bs-interval="5000">
+                  <img src="sliderimg2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="sliderimg3.png" class="d-block w-100" data-bs-interval="5000">
+                  <img src="sliderimg3.png" class="d-block w-100" alt="...">
                 </div>
               </div>
-              
             </div>
          
 	            </div>
