--- a/contact.html
+++ b/contact.html
@@ -48,12 +48,17 @@
       </header>
 
       <section class="hero-wrap js-fullheight">
-	      <div class="container px-0">
+	      <div class="container px-100">
+          
 	        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
-	          <div class="col-md-12 ftco-animate text-center">
+            <div class="col-md-20 ftco-animate text-center">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12094.98165935238!2d29.9695035!3d40.7236206!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cb452c39e5717b%3A0x4fed2448ab2e1724!2sKocaeli%20Meslek%20Y%C3%BCksek%20Okulu!5e0!3m2!1str!2str!4v1685532048973!5m2!1str!2str" width="90%" height="70%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 	          	<div class="desc">
-		            <h1>web sitesi </h1>
-		            <h3>Sektöründe lider</h3>
+                <h1><span><a href="tel:+905396576118"></i> BİZİ ARAYIN</a></span></h1> 
+                <h3>YA DA</h3>
+                <h2><span><a href="mailto:semihkalmuk@hotmail.com"></i> MAİL İLE ULAŞIN</a></span></h2> 
+
 	            </div>
 	          </div>
 	        </div>
