--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 	        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
 	          <div class="col-md-12 ftco-animate text-center">
 	          	<div class="desc">
-		            <h1>WEB SİTESİ </h1>
-		            <h3>Sektöründe lider</h3>
+		            <h1><span><a href="catalog.html"></i> PORTFÖY</a></span></h1>
+		            <h3>sektöründe lider</h3>
 	            </div>
 	          </div>
 	        </div>
