--- a/catalog.html
+++ b/catalog.html
@@ -12,6 +12,12 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	</head>
+  <style> .carousel slider{
+
+  }
+  
+  
+  </style>
 	<body>
     
 
@@ -50,16 +56,26 @@
       <section class="hero-wrap js-fullheight">
 	      <div class="container px-0">
 	        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+              </ol>
+              <div class="carousel-inner" style="padding-top: 5%;";>
                 <div class="carousel-item active">
-                    <img src="sliderimg1.png" class="d-block w-100" alt="...">
+                  <img class="d-block w-100" src="s3.png" alt="First slide" style="width: 80%; height: 80%;">
                 </div>
                 <div class="carousel-item">
-                  <img src="sliderimg2.png" class="d-block w-100" alt="...">
+                  <img class="d-block w-100" src="s4.png" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                  <img src="sliderimg3.png" class="d-block w-100" alt="...">
+                  <img class="d-block w-100" src="s5.png" alt="Third slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="s5.png" alt="Third slide">
+                    </div>
                 </div>
               </div>
             </div>
