--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	          <div class="col-md-12 ftco-animate text-center">
 	          	<div class="desc">
 		            <h1><span><a href="catalog.html"></i> PORTFÖY</a></span></h1>
-		            <h3>sektöründe lider</h3>
+		            <h5><span><a href="contact.html"></i> Profesyonel bir web sayfası için ilk adım</a></span></h5>
 	            </div>
 	          </div>
 	        </div>
